2008-09-23  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.XmlEditor.addin.xml: Set an id to the xml editor
	  extension.

2008-09-18  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.XmlEditor.Completion/XmlCompletionDataProvider.cs,
	  MonoDevelop.XmlEditor.Completion/ClosingBracketCompletionDataProvider.cs:
	  Track api changes.

2008-09-12  Lluis Sanchez Gual <lluis@novell.com> 

	* Tests/MonoDevelop.XmlEditor.Tests.mdp, gtk-gui/generated.cs,
	  gtk-gui/MonoDevelop.XmlEditor.Gui.XmlEditorOptionsPanelWidget.cs,
	  gtk-gui/MonoDevelop.XmlEditor.Gui.XmlSchemasPanelWidget.cs: Updated
	  generated code.

2008-08-26  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Xml.StateEngine/XmlTagState.cs,
	  MonoDevelop.Xml.StateEngine/XmlChar.cs,
	  MonoDevelop.Xml.StateEngine/XmlNameState.cs, Makefile.am,
	  MonoDevelop.XmlEditor.mdp: Use Mono's System.Xml.XmlChar to check
	  whether name chars are valid for XML.

2008-08-20  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Xml.StateEngine/XmlAttributeValueState.cs,
	  MonoDevelop.Xml.StateEngine/XmlFreeState.cs: Replace C#3 automatic
	  properties into C# 2 properties. Fixes build on Mono < 1.9. Thanks
	  to Joshua Simmons for the patch.

2008-08-01  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Xml.StateEngine/XmlAttributeValueState.cs,
	  MonoDevelop.Xml.StateEngine/XmlAttributeState.cs: Break up
	  attribute value states.
	* MonoDevelop.Xml.StateEngine/Parser.cs: Attach parser state to
	  exceptions.

2008-07-31  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Xml.StateEngine/XmlAttributeValueState.cs,
	  MonoDevelop.Xml.StateEngine/XmlAttributeState.cs: Use a
	  MalformedTagState for recovery.
	* MonoDevelop.Xml.StateEngine/XmlCommentState.cs,
	  MonoDevelop.Xml.StateEngine/XmlDocTypeState.cs,
	  MonoDevelop.Xml.StateEngine/XmlCDataState.cs,
	  MonoDevelop.Xml.StateEngine/XmlProcessingInstructionState.cs: