@@ -108,5 +108,10 @@ namespace MonoDevelop.XmlEditor.Completion
 			}
 			return text.CompareTo(((XmlCompletionData)obj).text);
 		}
+
+		public virtual int CompareTo (ICompletionData x)
+		{
+			return String.Compare (Text[0], x.Text[0], true);
+		}		
 	}
 }
