@@ -83,5 +83,10 @@ namespace MonoDevelop.XmlEditor.Completion
 				buf.EndAtomicUndo ();
 			}
 		}
+
+		public virtual int CompareTo (ICompletionData x)
+		{
+			return String.Compare (Text[0], x.Text[0], true);
+		}		
 	}
 }
